# xbot_ros

./: CMakeLists.txt  README.md  package.xml
launch/: centauro_audio_echo.launch  joy_pilot.launch  robot_state_logger.launch
plugin/: CMakeLists.txt
plugin/src/: AuxRosPublisher.cpp  AuxRosPublisher.h
scripts/: centauro_audio_echo.py  env-loader.sh
src/: offset_calibration.cpp  robot_collision_publisher_node.cpp  robot_state_logger.cpp  torque_offset_calib.cpp
